--- a/config/global.yaml
+++ b/config/global.yaml
@@ -4,11 +4,11 @@ CASES_PREFIX: "/home/marsdenlab/datasets/vascular_data"
 LEAK: 0.2
 CROP_DIMS: 128
 IMAGE_DIMS: 192
-BATCH_SIZE: 16
-LEARNING_RATE: 1e-4
+BATCH_SIZE: 4
+LEARNING_RATE: 0.0001
 TRAIN_STEPS: 20000
-PRINT_STEP: 200
-INIT: 7e-2
-LAM: 1e-3
+PRINT_STEP: 20
+INIT: 0.07
+L2_REG: 0.001
 NUM_FILTERS: 32
-QUEUE_SIZE: 10
+QUEUE_SIZE: 500
