--- a/config/global.yaml
+++ b/config/global.yaml
@@ -7,8 +7,10 @@ IMAGE_DIMS: 192
 BATCH_SIZE: 4
 LEARNING_RATE: 0.0001
 TRAIN_STEPS: 20000
-PRINT_STEP: 20
+PRINT_STEP: 200
 INIT: 0.07
 L2_REG: 0.001
 NUM_FILTERS: 32
 QUEUE_SIZE: 500
+NUM_THREADS: 16
+THRESHOLD: 0.3
