--- a/config/global.yaml
+++ b/config/global.yaml
@@ -1,13 +1,14 @@
 CASES_DIR: "./cases"
-CASES_PREFIX: "/home/marsdenlab/datasets/vascular_data"
+CASES_PREFIX: "/home/marsdenlab/Documents/project2/files"
+  #"/home/marsdenlab/datasets/vascular_data"
 
 LEAK: 0.2
 CROP_DIMS: 128
 IMAGE_DIMS: 192
 BATCH_SIZE: 4
 LEARNING_RATE: 0.0001
-TRAIN_STEPS: 40000
-PRINT_STEP: 200
+TRAIN_STEPS: 400
+PRINT_STEP: 100
 INIT: 0.07
 L2_REG: 0.0001
 NUM_FILTERS: 32
