--- a/config/case1_loft.yaml
+++ b/config/case1_loft.yaml
@@ -7,7 +7,7 @@ TRAIN_FILE_LIST: "./results/case1_loft/train.txt"
 VAL_FILE_LIST: "./results/case1_loft/val.txt"
 TEST_FILE_LIST: "./results/case1_loft/test.txt"
 EXPERIMENT_FILE: "I2INet"
-PRETRAINED_MODEL_PATH: "media/marsdenlab/Data1/johanna/models/i2i_CT/i2i_CT.data-00000-of-00001"
+#PRETRAINED_MODEL_PATH: "./../media/marsdenlab/Data1/johanna/models/i2i_CT/i2i_CT.data-00000-of-00001"
 THRESHOLD: 0.3
 
 MODEL_DIR: "./results/case_test1_loft/model"
@@ -24,6 +24,7 @@ RANDOM_CROP: true
 NUM_CHANNELS: 1
 #maximal offset of random image crop center-->in train_utils.py: random_crop()
 PATH_PERTURB: 5
+NORMALIZE: LOCAL_MAX_NORM
 
 VAL_PATTERNS:
   - OSMSC0110
