--- a/config/imageCheck.yaml
+++ b/config/imageCheck.yaml
@@ -2,15 +2,16 @@ DATA_DIR: "/home/johanna/files"
 FILE_LIST: "/home/johanna/files/files.txt"
 
 
-RESULTS_DIR: "./results/imageCheck"
+RESULTS_DIR: "./results/imageCheckContourtest"
 TRAIN_FILE_LIST: "./results/case1_loft/train.txt"
 VAL_FILE_LIST: "./results/case1_coronary/imageCheck.txt"
 TEST_FILE_LIST: "./results/case1_loft/test.txt"
-EXPERIMENT_FILE: "I2INet"
+EXPERIMENT_FILE: "I2INetNonLinearTH"
 #PRETRAINED_MODEL_PATH: "./../media/marsdenlab/Data1/johanna/models/i2i_CT/i2i_CT.data-00000-of-00001"
 THRESHOLD: 0.3
+THRESHOLDTYP: "CONSTANT"
 
-MODEL_DIR: "./results/case1_loft_useYc/model"
+MODEL_DIR: "./results/case1_coronaryOnly_useYcTest/model"
 MODEL_NAME: "I2I"
 
 SPACING: 0.035
@@ -27,7 +28,8 @@ PATH_PERTURB: 5
 NORMALIZE: LOCAL_MAX_NORM
 RADIUSRANGEFIXED: False
 RADIUSRANGES: [0.000,0.002,0.003,0.004,0.005,0.006,0.007,0.008,0.009,0.01,0.011,.012,0.013,0.014,5]
-
+DICERANGES: [0.0,0.10,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1.0]
+DICESPLIT: 0.3
 
 VAL_PATTERNS:
   - OSMSC0110
